--- a/index.html
+++ b/index.html
@@ -23,19 +23,14 @@
 
                 <div class="proyectos-grid">
                     <div class="proyectos">
+                        <a href="https://github.com/jjye6/scripts"><h3>Scripts</h3></a>
+                        <p>Diversos scripts con diferentes utilidades implementados con Bash y Python</p><br>
+                    </div>
+
+                    <div class="proyectos">
                         <a href="https://drive.google.com/file/d/1vj9JdAa5S1-j7woO2P7ZpruG0SMS_JV7/view?usp=sharing"><h3>Brazo róbotico</h3></a>
                         <p>Brazo róbotico impreso 3D implementado con Arduino.</p><br>
                         <img src="img/brazo.png" style="width: 100%; border-radius: 8px; margin-bottom: 1rem;">
-                    </div>
-
-                    <div class="proyectos">
-                        <a href="https://github.com/jjye6/bash/blob/main/SCRIPTS/wifi_crack.sh"><h3>Script Aircrack-ng</h3></a>
-                        <p>Script de Aircrack-ng automatiza la captura de paquetes, la obtención del handshake y el descifrado de claves WiFi mediante ataques de diccionario o fuerza bruta.</p><br>
-                    </div>
-
-                    <div class="proyectos">
-                        <a href="https://github.com/jjye6/key_logger"><h3>Key Logger</h3></a>
-                        <p>Ejecutable de Python que registra las teclas presionadas por el usuario y las guarda en archivos de texto.</p><br>
                     </div>
                 </div>
             </div>
