--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                 <img src="https://img.icons8.com/ios-filled/50/000000/linkedin.png"/>
                 <p>LinkedIn</p>
             </a>
+
+            <a href="https://drive.google.com/file/d/1oECRZzbAi0k2cf1lQHJJ92MnKjH_1-Nl/view?usp=sharing" class="contactos_item">
+                <img src="https://img.icons8.com/ios-filled/50/000000/document.png"/>
+                <p>CV</p>
+            </a>
                 
             <div class="contactos_item">
                 <img src="https://img.icons8.com/ios-filled/50/000000/email.png" id="imagen_link" style="cursor: pointer;"/>
