--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <!-- HEADER -->
         <header>
-            <h2>Jiajun Ye</h2>
+            <a href="index.html"><h2>Jiajun Ye</h2></a>
             <nav>
                 <ul>
                     <li><a href="#" id="texto_cambiar">Sobre mí</a></li>
