--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -10,7 +10,7 @@
     <body>
         <!-- HEADER -->
         <header>
-            <h2>Jiajun Ye</h2>
+            <a href="../index.html"><h2>Jiajun Ye</h2></a>
             <nav>
                 <ul>
                     <li><a href="../index.html" id="texto_cambiar">Home</a></li>
