--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="proyecto">
                     <a href="https://github.com/jjye6/scripts"><h3>Scripts</h3></a>
-                    <p>Diversos scripts con diferentes utilidades implementados con Bash y Python</p>
+                    <p>Diversos scripts con diferentes utilidades implementados con Bash, Python y Powershell</p>
                 </div>
             </section>
         </main>
