--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div id="perfil_info">
                     <p>Hola, soy</p>
                     <h1>Jiajun Ye</h1>
-                    <h3>Técnico de sistemas microinformáticos y redes</h3>
+                    <h3>Técnico en sistemas microinformáticos y redes</h3>
 
                     <!-- BOTONES -->
                     <div class="botones" id="texto1">
