--- a/html/contacto.html
+++ b/html/contacto.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="../css/contacto.css">
     </head>
 
-    <body>
+    <body class="aparecer">
         <!-- HEADER -->
         <header>
             <a href="../index.html"><h2>Jiajun Ye</h2></a>
