--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contactos - Jiajun Ye</title>
+        <link rel="icon" href="../img/logo.jpg">
         <link rel="stylesheet" href="../css/contacto.css">
     </head>
 
