--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portafolio - Jiajun Ye</title>
+        <link rel="icon" href="img/logo.jpg">
         <link rel="stylesheet" href="css/index.css">
     </head>
 
